# CTF2

./: .gitignore  Dockerfile  README.md  dif  docker-compose.yml  flake.nix  justfile  pyproject.toml  requirements.txt
casino/: casino.cabal  hie.yaml  justfile
casino/lib/Data/Casino/: SetRequest.hs  SpinResult.hs  User.hs
casino/lib/Yesod/Auth/: JWT.hs
casino/src/: API.hs  Application.hs  Foundation.hs  Main.hs  Routes.hs
casino/static/: styles.css
ctf/: load_tasks.py
ctf/ctf/: asgi.py  settings.py  urls.py  wsgi.py
ctf/static/task/css/: styles.css
ctf/task/: admin.py  context_processors.py  forms.py  metrics.py  middleware.py  minio_client.py  minio_test.py  models.py  urls.py  utils.py  views.py
ctf/task/migrations/: 0001_initial.py  0002_rename_tit_task_title_task_answer_task_description_and_more.py  0003_attempt.py  0004_task_points.py  0005_usertask_delete_attempt.py  0006_attempt_delete_usertask.py  0007_remove_task_file_url_task_file_name.py  0008_alter_attempt_unique_together.py  0009_alter_attempt_correct_profile.py
ctf/task/static/task/css/: styles.css
ctf/task/static/task/templatetags/: task_tags.py
ctf/task/templates/task/: base.html  edit_profile.html  leaderboard.html  login.html  profile.html  register.html  rules.html  task_detail.html  task_list.html
infra/: README.md  casino.yaml  django-config.yaml  django-load-tasks.yaml  django-secret.yaml  django-secret.yaml.gpg  django.yaml  minio-config.yaml  minio-secret.yaml.gpg  postgres-config.yaml  postgres-exporter.yaml  postgres-secret.yaml  postgres-secret.yaml.gpg  postgres.yaml  prometheus-config.yaml  prometheus.yaml
infra/examples/: django-secret.yaml  minio-secret.yaml  postgres-secret.yaml
nix/: image.nix
