[tool.poetry]
name = "ctf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
attrs = "23.2.0"
bcrypt = "4.1.2"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cryptography = "42.0.5"
distro = "1.9.0"
django = "5.0.4"
django-prometheus = "^2.3.1"
docopt = "0.6.2"
idna = "3.7"
ifaddr = "^0.2.0"
jsonschema = "3.2.0"
minio = "^7.2.7"
packaging = "24.0"
paramiko = "3.4.0"
postgres = "4.0"
prometheus-client = "^0.20.0"
psycopg2-binary = "2.9.9"
psycopg2-pool = "1.2"
pycparser = "2.22"
pynacl = "1.5.0"
pyrsistent = "0.20.0"
python-dotenv = "0.21.1"
requests = "2.31.0"
setuptools = "^69.5.1"
six = "1.16.0"
sqlparse = "0.5.0"
texttable = "1.7.0"
urllib3 = "2.2.1"
websocket-client = "0.59.0"
wheel = "0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
