cabal-version: 2.4
name:          casino
version:       0.1.0.0
copyright:     2024 head-hardener
maintainer:    trashbin2019np@gmail.com
author:        Head Gardener
synopsis:      casino
category:      Web

-- description:

-- bug-reports:

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -threaded

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , appar
    , async
    , base               >=4   && <5
    , base64-bytestring
    , bytestring
    , containers
    , cookie
    , cryptonite
    , data-default
    , directory
    , filepath
    , http-types
    , jwt
    , memory
    , mtl
    , optics-core
    , profunctors
    , relude             >=1.0
    , text
    , time
    , with-utf8

  default-language:   Haskell2010

library casino-lib
  import:          shared
  hs-source-dirs:  lib
  build-depends:

  -- cabal-fmt: expand lib
  --
  exposed-modules:

executable casino
  import:             shared
  default-extensions:
    QuasiQuotes
    TemplateHaskell

  other-modules:
    Application
    Foundation
    Routes

  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     src
  build-depends:
    , casino-lib
    , yesod-auth
    , yesod-core
    , yesod-form

test-suite casino-test
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
  build-depends:
    , casino-lib
    , hspec
    , QuickCheck

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    -rtsopts -with-rtsopts=-N
